--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
 *{
     padding: 0;
     margin: 0;
@@ -6,7 +7,7 @@
 }
 html{
     font-size: 14px;
-    font-family: 'Roboto', sans-serif;
+    
     
     
 }
@@ -17,6 +18,7 @@ body{
     background-position: center; 
     padding-top: 50px;
     padding-bottom: 300px;
+    font-family: 'Roboto', sans-serif;
 }
 
 header{
@@ -125,4 +127,7 @@ footer #ok{
     color: black;
     border-radius: 5px;
     margin-left: 10px;
+}
+footer #ok:hover{
+    background-color: yellowgreen;
 }
